refactor(event): 迁移 VerifierFailure + 测试套件到 DomainEventPublisher(⑥ follow-up)
延续上轮 WorkflowTerminal 接入,完成剩余 2 处 outbox 直写:
- VerifierFailureOutboxService:buildEvent 返 DomainEvent,删 OutboxEventEntity /
  OutboxPublishStatus / JsonUtils 直接依赖
- TaskDispatchOutboxService 上轮已通过 spotless pre-commit 自动落到 commit
  07d832cc(parallel session 顺带带过)

支撑改动:
- DomainEvent 加 `priority` 可选字段(TaskDispatch 需要,OutboxPublisher 透传到
  OutboxEventEntity.setPriority,缺省走 DB DEFAULT 5)
- DomainEvent 改用 Collections.unmodifiableMap 包 LinkedHashMap,允许 null
  payload value(Map.copyOf 拒 null 与 outbox JSON 序列化 "finishedAt":null 语义冲突)
- JsonUtils 加 `toMap(Object)` 走 Jackson convertValue,替 toJson + fromJson
  双次序列化,给 DomainEventPublisher 之类 payload 抽象用

测试更新(5 个文件):
- WorkflowTerminalOutboxServiceTest:OutboxEventMapper → DomainEventPublisher mock,
  ArgumentCaptor OutboxEventEntity → DomainEvent,getXxx → xxx,payloadJson 字符串
  断言 → payload Map 断言
- TaskDispatchOutboxServiceTest / TaskDispatchOutboxServiceBehaviorTest /
  TaskDispatchOutboxServiceMandatoryTest:同上,@Mock + local mock 两种风格都迁
- VerifierFailureOutboxServiceTest:local mock(OutboxEventMapper.class)pattern
  迁 DomainEventPublisher,删 publishStatus 断言(DomainEvent 无此字段,publisher 设置)

test-compile 验证通过(batch-common + batch-orchestrator -am)。

到此 ⑥ 全 3 处 outbox 写入(WorkflowTerminal / TaskDispatch / VerifierFailure)
已统一走 publisher。trigger 模块若新增事件可实现自己的 TriggerOutboxDomainEventPublisher
对接 trigger_outbox_event,三表分工不破。

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>